Ajout des tokens utilisateurs et admin

--- a/mouvimana/BACK-END/.env
+++ b/mouvimana/BACK-END/.env
@@ -1,2 +1,4 @@
 PORT = 8000
 MONGO_URI = 'mongodb://localhost:27017/mouvimana'
+TOKEN = '!UA^%rJ!8pC$2@6^5@j2*46#22P2%r'
+TOKEN_ADMIN = '$%u5%SeX#9@!w@6^993z!27o#*7C4E'
